# libcRSID

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libcRSID.h
.github/workflows/: cmake.yml
example/: CMakeLists.txt  sidplayer-sapp.c  sidplayer.c
example/data/: Edge_of_Disgrace.h
host/: file.c
